{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 52,
  "lineage": "c5451642-ce42-aa6d-bb4c-6b34cf56b81e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demoinstance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05fa00d4c63e32376",
            "arn": "arn:aws:ec2:us-east-1:093295838217:instance/i-05c24cba483f4f2d0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05c24cba483f4f2d0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "master",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03d7bc7f76c73546c",
            "private_dns": "ip-192-168-200-20.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.200.20",
            "public_ip": "44.197.215.233",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-091011a976010c1bb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08a69f9444ff6c3ba",
            "tags": {
              "Name": "Instance2"
            },
            "tags_all": {
              "Name": "Instance2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-005e4885e6e64aa50"
            ]
          },
          "dependencies": [
            "aws_security_group.demosg",
            "aws_subnet.public-subnet-2",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05fa00d4c63e32376",
            "arn": "arn:aws:ec2:us-east-1:093295838217:instance/i-02d4bed9819d16ed7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02d4bed9819d16ed7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "master",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-083a8dd4c71517bf7",
            "private_dns": "ip-192-168-100-188.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.100.188",
            "public_ip": "54.145.116.141",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08aaca8e432892e61",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f471f42fd6f8e470",
            "tags": {
              "Name": "Instance1"
            },
            "tags_all": {
              "Name": "Instance1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-005e4885e6e64aa50"
            ]
          },
          "dependencies": [
            "aws_security_group.demosg",
            "aws_subnet.public-subnet-1",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demogateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:093295838217:internet-gateway/igw-0fc09a3ab1b9b82f9",
            "id": "igw-0fc09a3ab1b9b82f9",
            "owner_id": "093295838217",
            "tags": {
              "Name": "tf-IGW"
            },
            "tags_all": {
              "Name": "tf-IGW"
            },
            "vpc_id": "vpc-0c3ef80b51a5505de"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "external-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:093295838217:loadbalancer/app/Load-Balancer/c99ee2621a132bbf",
            "arn_suffix": "app/Load-Balancer/c99ee2621a132bbf",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Load-Balancer-1356285836.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:093295838217:loadbalancer/app/Load-Balancer/c99ee2621a132bbf",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Load-Balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-005e4885e6e64aa50"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08a69f9444ff6c3ba"
              },
              {
                "subnet_id": "subnet-0f471f42fd6f8e470"
              }
            ],
            "subnets": [
              "subnet-08a69f9444ff6c3ba",
              "subnet-0f471f42fd6f8e470"
            ],
            "vpc_id": "vpc-0c3ef80b51a5505de",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.demosg",
            "aws_subnet.public-subnet-1",
            "aws_subnet.public-subnet-2",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "external-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:093295838217:listener/app/Load-Balancer/c99ee2621a132bbf/c3da929e3fc7a29d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:093295838217:targetgroup/elb-target/8c141070cbc99efc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:093295838217:listener/app/Load-Balancer/c99ee2621a132bbf/c3da929e3fc7a29d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:093295838217:loadbalancer/app/Load-Balancer/c99ee2621a132bbf",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.external-elb",
            "aws_lb_target_group.target-elb",
            "aws_security_group.demosg",
            "aws_subnet.public-subnet-1",
            "aws_subnet.public-subnet-2",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:093295838217:targetgroup/elb-target/8c141070cbc99efc",
            "arn_suffix": "targetgroup/elb-target/8c141070cbc99efc",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:093295838217:targetgroup/elb-target/8c141070cbc99efc",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "elb-target",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c3ef80b51a5505de"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:093295838217:targetgroup/elb-target/8c141070cbc99efc-20220909194941080800000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:093295838217:targetgroup/elb-target/8c141070cbc99efc",
            "target_id": "i-02d4bed9819d16ed7"
          },
          "dependencies": [
            "aws_instance.instance",
            "aws_lb_target_group.target-elb",
            "aws_security_group.demosg",
            "aws_subnet.public-subnet-1",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attachment1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:093295838217:targetgroup/elb-target/8c141070cbc99efc-20220909194940415400000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:093295838217:targetgroup/elb-target/8c141070cbc99efc",
            "target_id": "i-05c24cba483f4f2d0"
          },
          "dependencies": [
            "aws_instance.demoinstance1",
            "aws_lb_target_group.target-elb",
            "aws_security_group.demosg",
            "aws_subnet.public-subnet-2",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Publicroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:093295838217:route-table/rtb-0d5b7d8f19d9d1338",
            "id": "rtb-0d5b7d8f19d9d1338",
            "owner_id": "093295838217",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fc09a3ab1b9b82f9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-rt"
            },
            "tags_all": {
              "Name": "tf-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c3ef80b51a5505de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.demogateway",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route-sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b75c699f757f9794",
            "route_table_id": "rtb-0d5b7d8f19d9d1338",
            "subnet_id": "subnet-0f471f42fd6f8e470"
          },
          "dependencies": [
            "aws_internet_gateway.demogateway",
            "aws_route_table.Publicroute",
            "aws_subnet.public-subnet-1",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0974c45295ba65ad6",
            "route_table_id": "rtb-0d5b7d8f19d9d1338",
            "subnet_id": "subnet-08a69f9444ff6c3ba"
          },
          "dependencies": [
            "aws_internet_gateway.demogateway",
            "aws_route_table.Publicroute",
            "aws_subnet.public-subnet-2",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demosg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:093295838217:security-group/sg-005e4885e6e64aa50",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-005e4885e6e64aa50",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220909194857882500000001",
            "name_prefix": "terraform-",
            "owner_id": "093295838217",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web SG"
            },
            "tags_all": {
              "Name": "Web SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c3ef80b51a5505de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:093295838217:subnet/subnet-0f471f42fd6f8e470",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.100.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f471f42fd6f8e470",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "093295838217",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-public-sn-1"
            },
            "tags_all": {
              "Name": "tf-public-sn-1"
            },
            "vpc_id": "vpc-0c3ef80b51a5505de"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:093295838217:subnet/subnet-08a69f9444ff6c3ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.200.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a69f9444ff6c3ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "093295838217",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-public-sn-2"
            },
            "tags_all": {
              "Name": "tf-public-sn-2"
            },
            "vpc_id": "vpc-0c3ef80b51a5505de"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demovpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:093295838217:vpc/vpc-0c3ef80b51a5505de",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0c720163301c01a26",
            "default_route_table_id": "rtb-06886baf68b81b242",
            "default_security_group_id": "sg-091ddc4dc0591cb20",
            "dhcp_options_id": "dopt-046df7bc1dcfd0164",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c3ef80b51a5505de",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06886baf68b81b242",
            "owner_id": "093295838217",
            "tags": {
              "Name": "tf- VPC"
            },
            "tags_all": {
              "Name": "tf- VPC"
            }
          }
        }
      ]
    }
  ]
}